Pyface Changelog
================

Release 7.4.2
=============

Highlights of this release
--------------------------

This is a bugfix release that collects a number of additional issues discovered
and fixed since the 7.4.1 release.

Detailed changes
----------------

Thanks to:

* Eric Anderson
* Mark Dickinson
* Robert Kern
* Orion Poplawski
* Rahul Poruri
* PyHannes
* Corran Webster

Fixes

* fix ConsoleWidget PySide6 issues (#1146, #1147)
* fix default AboutDialog image (#1142)
* remove reference cycle for actions on clean-up (#1143)
* status bar manager not cleaned up properly (#1141)
* expose QOpenGLWidget in a consistent place in pyface.qt (#1138)
* map popup menu coordinates to global (#1137)
* fix issues with last window close on Qt6 (#1136)
* font size and stretch are ints at the toolkit level (#1118)

Documentation

* add copy buttons for example code (#1134)

CI

* add a publish to PyPI Github action (#1126)

Release 7.4.1
=============

Highlights of this release
--------------------------

This is a bugfix release that fixes an issue that was causing memory
corruption and occasional segfaults when using the new ArrayImage and
PILImage classes on Windows with PySide2.

Detailed changes
----------------

Thanks to:

* Mark Dickinson
* Rahul Poruri
* Corran Webster
* John Wiggins

Fixes

* fix segfaults and memory corruption from dropped QImage references (#1108)

Release 7.4.0
=============

Highlights of this release
--------------------------

This release features some significant refactoring and reorganisation of the
Pyface API aimed at making it generally more coherent.  Specific changes
include:

* adding intermediate interfaces and classes to collect common roles and
  behaviours.
* adding hooks to control widget sizing behaviour within layouts/sizers.
* deprecating behavior where a class creates the underlying toolkit widget in
  the __init__ method.  This was done by a small minority of Widget classes,